day-14/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    app: nginx
  name: nginx-pod
spec:
  containers:
  - image: nginx
    name: nginx-pod
    resources:
      limits:
        cpu: 0.5
        memory: 64Mi
    # securityContext:
    #   runAsNonRoot: false      
  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}
---
apiVersion: v1
kind: Namespace
metadata:
  name: akatuski
---
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    app: nginx
  name: nginx-pod
  namespace: akatuski
spec:
  containers:
  - image: nginx
    name: nginx-pod
    securityContext:
      runAsNonRoot: false     
    resources:
      limits:
        cpu: 0.5
        memory: 64Mi 
  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}
